# GeneticAlgorithms

./: .gitignore  17107355.urls  README.md  dna.py  gene.py  main.py  output.txt  plan  population.py  requirements.txt  test.py  wget-log
cell_modelling/: Makefile  Makefile.am  Makefile.in  analyze.py  automata.py  boolfunction.py  debug.py  drawgraph.py  generate_automata.py  myrandom.py  process_automata.py  processing.py  proxyfunctions.py  saveload.py  state.py  test.py  tmp.py
cell_modelling/old/: AutomataHieratchy.py  AutomataStatesStructure.py  Basin.py  CertainAutomata.py  GraphIsomorphism.py  StateHierarchy.py  ThroughAllAutomata.py
